Bug 58912 - FILESAVE: HTML export: headers and footers cause non-validating html code
Summary: FILESAVE: HTML export: headers and footers cause non-validating html code
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-31 19:25 UTC by clemty
Modified: 2013-10-06 18:44 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
document with header and footer (9.16 KB, application/vnd.oasis.opendocument.text)
2012-12-31 19:25 UTC, clemty
Details

Note You need to log in before you can comment on or make changes to this bug.
Description clemty 2012-12-31 19:25:50 UTC
Created attachment 72355 [details]
document with header and footer

Problem description: 

Steps to reproduce:
1. Create writer document with header and/or footer
2. Save document as .html
3. Validate resulting file using HTML tidy plugin in Firefox or using http://validator.w3.org/

Current behavior:
Export creates a "DIV TYPE=FOOTER" which does not validate as HTML 4.01 transitional because "type" is not part of the standard.


Expected behavior:
Create validating HTML code. (Perhaps use CLASS if the content should be styled through CSS or TITLE if it is only needed for readability?)
Operating System: All
Version: 3.6.4.3 release
Comment 1 clemty 2012-12-31 19:27:26 UTC
Still happens in lodev 4.0 beta1
Comment 2 Commit Notification 2013-10-06 18:44:40 UTC
Thomas Arnhold committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=028b3ad8e19609ad3cb490135eb0dd5bb8eafcfe

fdo#58912 HTML export: headers and footers cause non-validating html



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.