fdo#58912 HTML export: headers and footers cause non-validating html

Fix it by using harmless title.

Change-Id: I238034a23f4a446c69dd3c1408ac5ccf038c73dd